<resources>

    <!-- App -->
    <string name="app_name">AllStarKtRepos</string>

    <!-- Screen Titles -->
    <string name="title_recycler_view">Most Starred Kotlin Repositories</string>

    <!-- Repository -->
    <string name="repo_title">Repo Title PlaceHolder</string>
    <string name="repo_author_name">John Kotlin Java</string>

    <!-- Action -->
    <string name="action_go_to_github">Go to repository</string>
    <string name="action_retry">Retry</string>

    <!-- Hint -->
    <string name="search_hint">GitHub repositories</string>

    <!-- Message -->
    <string name="msg_no_results">No results found…</string>

    <!-- Image Descriptions -->
    <string name="description_star">This is a star</string>
    <string name="description_git_fork">This is a git fork</string>
    <string name="description_avatar">This is the repository\'s owner profile picture</string>

</resources>